# bevy_gen_gaussian

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  GAUSSIAN_BACKUP.md  README.md
assets/scenes/: FusedFace_LOD3.glb  cuber.glb  torus.glb  toruser.glb
assets/shaders/: fluid_sim.wgsl  gaussian_splat.wgsl  tri_to_splat.wgsl  voxel_billboard.wgsl
examples/: background_fluid_sim.rs  basic_view.rs  gpu_one_to_one.rs  sdf_editing.rs
src/: 20250826_notes.md  billboard.rs  billboard_instanced.rs  billboard_render.rs  constants.rs  debug_overlay.rs  edit.rs  extraction.rs  lib.rs  lib_new.rs  main.rs  metrics.rs  sdf.rs  voxel.rs
src/beat_cauldron/: mod.rs
src/debug/: metrics.rs  mod.rs
src/gaussian/: cpu_mesh_to_gaussians.rs  creation.rs  gpu_mesh_to_gaussians.rs  mass.rs  mod.rs  settings.rs  transform.rs
src/sdf_module/: conversion.rs  mod.rs  operations.rs  primitives.rs
src/voxel/: billboard.rs  billboard_instanced.rs  billboard_render.rs  debug_overlay.rs  edit.rs  extraction.rs  metrics.rs  mod.rs  sdf.rs
