[package]
name = "bevy_gen_gaussian"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.com/placeholder"
readme = "README.md"

[lib]
name = "bevy_gen_gaussian"
path = "src/lib.rs"

[features]
default = ["billboard_mode"]
# Render / data feature flags
billboard_mode = []
gaussian_mode = []
node_color_u8 = []
indirection = []
palette_v2 = []
sdf_optim2 = []
sdf_optim3 = []

[dependencies]
# Updated Bevy to 0.16.1 and fixed feature name to multi_threaded
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_winit",
    "x11",
    "png",
    "tonemapping_luts",
    "multi_threaded",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_ui",
    "default_font",
    "bevy_scene",
    "bevy_gltf"
]}
bevy_gaussian_splatting = { path = "../bevy_gaussian_splatting", features = [
  "viewer",
  "io_ply",
  "planar",
  "buffer_storage",
]}
bytemuck = { version = "1.15", features = ["derive"] }
noise = "0.9.0"
# (removed direct wgpu dependency; use Bevy re-export)

[dev-dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_winit","x11","png","tonemapping_luts","multi_threaded","bevy_pbr","bevy_gizmos","bevy_ui"] }

[package.metadata.docs.rs]
all-features = true
